--- a/homepage.html
+++ b/homepage.html
@@ -3,45 +3,84 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/Users/baileyshelden/Desktop/todo-project/homepage.css">
+    <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
 <article class="content">
   <section class="header">
       <p class="Agenda">Agenda</p>
   </section>
-
   <div class="navbar">
-    <a href="#Misc.">Misc.</a>
-  <div class="dropdown">
-    <button class="dropbtn">Days of The Week
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="monday.html">Monday</a>
-      <a href="tuesday.html">Tuesday</a>
-      <a href="wednesday.html">Wednesday</a>
-      <a href="thursday.html">Thursdayay</a>
-      <a href="friday.html">Friday</a>
-      <a href="saturday.html">Saturday</a>
-      <a href="sunday.html">Sunday</a>
-    </div>
-  </div>
-</div>
-
+          <a href="homepage.html">Home Page</a>
+        <div class="dropdown2">
+          <a href="misc.html">Misc</a>
+        <div class="dropdown">
+          <button class="dropbtn">Days of The Week
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="monday.html">Monday</a>
+            <a href="tuesday.html">Tuesday</a>
+            <a href="wednesday.html">Wednesday</a>
+            <a href="thursday.html">Thursdayay</a>
+            <a href="friday.html">Friday</a>
+            <a href="saturday.html">Saturday</a>
+            <a href="sunday.html">Sunday</a>
+          </div>
+        </div>
+      </div> <br> <br>
 <section class="userinput">
   <form>
-    <input class="name" type="text" placeholder="What do you have to do?">
-    <input class="submit-btn" type="submit" value="submit">
-  </form>
+    <!-- <fieldset> -->
+    <p>What do you have to do?</p>
+      <input class="name" type="text" placeholder="Input Items Here!">
+        <br><br><p>
+          <label>Select Day</label>
+          <p class="daylabel">What day would you like to get this done on?</p>
+          <p>words are case sensitive, please spell everything correctly(monday-friday)</p>
+          <input class="info-stuff" type="text" placeholder="Day">
+          <input class="submit-btn" type="submit" value="submit">
+        <!-- </fieldset> -->
+      </form>
+    </section>
+<!-- <section class="card-container">
+  leave this empty
+</section> -->
+  <article class="stickynotes">
+    <section class="monday-container" id="daycontainer">
+      <p>Monday To Do List!</p>
+  </section>
+
+  <section class="tuesday-container" id="daycontainer">
+    <p>Tuesday To Do List!</p>
+  </section>
+
+<section class="wednesday-container" id="daycontainer">
+    <p>Wednesday To Do List!</p>
 </section>
 
-<section class="card-container">
-  <!-- leave this empty  -->
+<section class="thursday-container" id="daycontainer">
+    <p>Thursday To Do List!</p>
 </section>
+
+<section class="friday-container" id="daycontainer">
+    <p>Friday To Do List!</p>
+</section>
+
+<section class="saturday-container" id="daycontainer">
+    <p>Saturday To Do List!</p>
+</section>
+
+<section class="sunday-container" id="daycontainer">
+    <p>Sunday To Do List!</p>
+</section>
+<section class="Error-container" id="daycontainer">
+<!-- empty -->
+</section>
+</article>
 
 </article>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="/Users/baileyshelden/Desktop/todo-project/homepage.js"></script>
+      <script src="homepage.js"></script>
   </body>
 </html>
