--- a/homepage.html
+++ b/homepage.html
@@ -15,40 +15,27 @@
         <div class="dropdown2">
           <a href="misc.html">Misc</a>
         <div class="dropdown">
-          <button class="dropbtn">Days of The Week
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-content">
-            <a href="monday.html">Monday</a>
-            <a href="tuesday.html">Tuesday</a>
-            <a href="wednesday.html">Wednesday</a>
-            <a href="thursday.html">Thursdayay</a>
-            <a href="friday.html">Friday</a>
-            <a href="saturday.html">Saturday</a>
-            <a href="sunday.html">Sunday</a>
-          </div>
         </div>
       </div> <br> <br>
 <section class="userinput">
   <form>
-    <!-- <fieldset> -->
-    <p>What do you have to do?</p>
+    <br><br>
+    <fieldset>
+    <p class="whattodo">What do you have to do?</p>
       <input class="name" type="text" placeholder="Input Items Here!">
         <br><br><p>
-          <label>Select Day</label>
           <p class="daylabel">What day would you like to get this done on?</p>
-          <p>words are case sensitive, please spell everything correctly(monday-friday)</p>
+          <p class="warning">*words are case sensitive, please spell everything correctly(monday-friday)</p>
           <input class="info-stuff" type="text" placeholder="Day">
           <input class="submit-btn" type="submit" value="submit">
-        <!-- </fieldset> -->
+    </fieldset>
+    <br><br>
       </form>
     </section>
-<!-- <section class="card-container">
-  leave this empty
-</section> -->
+
   <article class="stickynotes">
     <section class="monday-container" id="daycontainer">
-      <p>Monday To Do List!</p>
+      <p ="monTD">Monday To Do List!</p>
   </section>
 
   <section class="tuesday-container" id="daycontainer">
@@ -74,13 +61,12 @@
 <section class="sunday-container" id="daycontainer">
     <p>Sunday To Do List!</p>
 </section>
-<section class="Error-container" id="daycontainer">
-<!-- empty -->
+</article>
+<section>
+<button class="" onclick="deleteEverything()">delete all</button>
 </section>
 </article>
-
-</article>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="homepage.js"></script>
+<script src="homepage.js"></script>
   </body>
 </html>
