--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
       <input class="name" type="text" placeholder="Input Items Here!">
         <br><br><p>
           <p class="daylabel">What day would you like to get this done on?</p>
-          <p class="warning">*words are case sensitive, please spell everything correctly(monday-friday)</p>
+          <p class="warning">*words are case sensitive, please spell everything correctly(monday-friday+general)</p>
           <input class="info-stuff" type="text" placeholder="Day">
           <input class="submit-btn" type="submit" value="submit">
     </fieldset>
@@ -61,9 +61,12 @@
 <section class="sunday-container" id="daycontainer">
     <p>Sunday To Do List!</p>
 </section>
+<section class="general-container" id="daycontainer">
+  <p>General To Do List!</p>
+</section>
 </article>
 <section>
-<button class="" onclick="deleteEverything()">delete all</button>
+<button id="deletebtn" onclick="deleteEverything()">delete all</button>
 </section>
 </article>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
